Document and further test rewrite_package

--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for Config-MVP-Writer-INI
 
 {{$NEXT}}
 
-  - Document 'spacing' attribute
+  - Document and test the 'spacing' and 'rewrite_package' options
   - Be more lenient in how sections are specified
   - Bug fixes
   - More tests
