--- a/README.pod
+++ b/README.pod
@@ -12,7 +12,7 @@ Config::MVP::Writer::INI - Build an INI file for Config::MVP
 
 =head1 VERSION
 
-version 0.001
+version 0.002
 
 =head1 SYNOPSIS
 
@@ -23,6 +23,55 @@ version 0.001
 This class takes a collection of L<Config::MVP> style data structures
 and writes them to a string in INI format.
 
+One usage example would be to create a roughly equivalent INI file
+from the output of a plugin bundle (L<Dist::Zilla>, L<Pod::Weaver>, etc.).
+
+The author makes no claim that this would actually be useful to anyone.
+
+=head1 ATTRIBUTES
+
+=head2 rewrite_package
+
+This attribute is a coderef that will be used to munge the package name
+of each section.  The package will be passed as the only argument
+(and also available as C<$_>) and should return the translation.
+If nothing is returned the original package will be used.
+
+This can be used to flavor the INI for a particular application.
+For example:
+
+  rewrite_package => sub { s/^MyApp::Plugin::/-/r; }
+
+will transform an array ref of
+
+  [ Stinky => 'MyApp::Plugin::Nickname' => {real_name => "Dexter"} ]
+
+into an INI string of
+
+  [-Nickname / Stinky]
+  real_name = Dexter
+
+=head2 spacing
+
+Defines the spacing between sections.
+Must be one of the following:
+
+=over 4
+
+=item payload
+
+(Default) Put blank lines around sections with a payload
+
+=item all
+
+Put a blank line between all sections
+
+=item none
+
+No blank lines
+
+=back
+
 =head1 METHODS
 
 =head2 ini_string
@@ -31,10 +80,17 @@ This takes an array ref of array refs,
 each one being a C<Config::MVP> style section specification:
 
   [
-    [ $name, $package, \%config ],
+    [ $name, $package, \%payload ],
   ]
 
 and returns a string.
+
+For convenience a few specification shortcuts are recognized:
+
+  $name                => [ $name, $name, {} ]
+  [ $name ]            => [ $name, $name, {} ]
+  [ $name, $package ]  => [ $name, $package, {} ]
+  [ $name, \%payload ] => [ $name, $name, \%payload ]
 
 =for comment has simplify_bundles => (
   is         => 'ro',
@@ -58,7 +114,11 @@ Documentation
 
 =item *
 
-A lot more tests
+More tests
+
+=item *
+
+Allow payload to be an arrayref for explicit ordering
 
 =back
 
